[gd_scene load_steps=2 format=3 uid="uid://by5xvbhtw6dfp"]

[ext_resource type="Script" path="res://Scenes/PrivateProperty/PrivateProperty.gd" id="1_rdp2r"]

[node name="PrivateProperty" type="Area2D"]
script = ExtResource("1_rdp2r")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
